syntax = "proto3";
package sourcehub.acp;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "sourcehub/acp/relationship.proto";

option go_package = "github.com/sourcenetwork/sourcehub/x/acp/types";

// AccessDecision models the result of evaluating a set of AccessRequests for an Actor
message AccessDecision {
  string id = 1;

  string policy_id = 2; // used as part of id generation

  string creator = 3; // used as part of id generation

  uint64 creator_acc_sequence = 4; // used as part of id generation

  repeated Operation operations = 5; // used as part of id generation

  string actor = 6; // used as part of id generation

  DecisionParams params = 7; // used as part of id generation

  google.protobuf.Timestamp creation_time = 8;

  // issued_height stores the block height when the Decision was evaluated
  uint64 issued_height = 9;
}

// DecisionParams stores auxiliary information regarding the validity of a decision
message DecisionParams {
  // number of blocks a Decision is valid for
  uint64 decision_expiration_delta = 1;

  // number of blocks a DecisionProof is valid for
  uint64 proof_expiration_delta = 2;

  // number of blocks an AccessTicket is valid for
  uint64 ticket_expiration_delta = 3;
}

// AccessRequest represents the wish to perform a set of operations by an actor
message AccessRequest {
  repeated Operation operations = 1;

  // actor requesting operations
  Actor actor = 2;
}

// Operation represents an action over an object.
message Operation {
  // target object for operation
  Object object = 1;

  // permission required to perform operation
  string permission = 2;
}
